--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
 .chord{
   position: absolute;
 	color: red;
-	background-color: white;
+	background-color: rgba(255, 255, 255, 0.7);
 	font-size: 13px;
 	font-weight: bold;
 	padding: 1px 3px;
