--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,17 @@
 .disc{
-	border: 2px solid;
 	width: 490px;
-	margin: 10px;
+	margin: 5px;
 	font-size: 15px;
 	padding: 5px;
 }
 
+h4{
+	margin: 5px;
+	color: white;
+}
+
 .container{
   position: relative;
-  border: 2px solid;
   width: 500px;
   margin: 10px;
 }
@@ -31,7 +34,7 @@
 	overflow: hidden;
 	width: 1000px;
 	margin: 10px;
-	
+		
 }
 
 .switch-field input {
@@ -49,7 +52,7 @@
 	font-size: 14px;
 	line-height: 1;
 	text-align: center;
-	padding: 5px 12px;
+	padding: 5px 14.5px;
 	margin-right: -1px;
 	border: 1px solid rgba(0, 0, 0, 0.2);
 	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
@@ -71,4 +74,19 @@
 
 .switch-field label:last-of-type {
 	border-radius: 0 4px 4px 0;
+}
+
+.hr{
+	height:2px;
+	background:rgba(255, 241, 241, 0.4);
+}
+
+.bg-img{
+	width:100%;
+	margin:auto;
+	max-width:525px;
+	min-height:670px;
+	position:relative;
+	background:grey;
+	box-shadow:0 20px 20px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
 }
