--- a/src/App.css
+++ b/src/App.css
@@ -82,10 +82,7 @@ h4{
 }
 
 .bg-img{
-	width:100%;
-	margin:auto;
-	max-width:525px;
-	min-height:670px;
+	width: 600px; 
 	position:relative;
 	background:grey;
 	box-shadow:0 20px 20px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
