--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ h4{
 .container{
   position: relative;
   width: 500px;
+	padding-bottom: 50px;
   margin: 10px;
 }
 
@@ -22,7 +23,9 @@ h4{
 	background-color: rgba(255, 255, 255, 0.7);
 	font-size: 13px;
 	font-weight: bold;
-	padding: 1px 3px;
+	text-align: left;
+	margin : 0px;
+	padding : 0px;
 }
 
 /* 라디오 버튼 */
